Opções de traduções de licença

--- a/language/ar.json
+++ b/language/ar.json
@@ -10,9 +10,22 @@
             "texto3": "_*< المعادي للعرب />*_\n\n*[ ℹ️ ] في هذه المجموعة، لا يُسمح بالأرقام التي تبدأ ب +92. لذا، سيتم طرد هذا الرقم من المجموعة.*"
         },
         "verificationLicense": {
-        "texto2": "\n  *محاولة* _{{tentativas}} من {{MaxTentativas}}_\n\n  _لقد استنفدت محاولاتك اليوم، في {{data}}! اشترِ ترخيصًا أو انتظر حتى الغد. {{dataAmanha}}_\n    *🏆 الوصول:* https://bit.ly/licenseSombrio",
-        "texto3": "*محاولة* _{{tentativas}} من {{MaxTentativas}} للأمر *{{command}}*_ \n\nاشترِ ترخيصًا أو انتظر حتى الغد للحصول على المزيد من {{MaxTentativas}} محاولات! \n\n_تحتاج إلى ترخيص للوصول إلى هذا الأمر._\n\nاشترِ ترخيصك واحصل على وصول كامل إلى جميع أوامر البوت.\n\n    *🏆 الوصول:* https://bit.ly/licenseSombrio \n    _افتح الوصول إلى جميع الأوامر._"
-    },
+            "texto2": "\n  *محاولة* _{{tentativas}} من {{MaxTentativas}}_\n\n  _لقد استنفدت محاولاتك اليوم، في {{data}}! اشترِ ترخيصًا أو انتظر حتى الغد. {{dataAmanha}}_\n    *🏆 الوصول:* https://bit.ly/licenseSombrio",
+            "texto3": "*محاولة* _{{tentativas}} من {{MaxTentativas}} للأمر *{{command}}*_ \n\nاشترِ ترخيصًا أو انتظر حتى الغد للحصول على المزيد من {{MaxTentativas}} محاولات! \n\n_تحتاج إلى ترخيص للوصول إلى هذا الأمر._\n\nاشترِ ترخيصك واحصل على وصول كامل إلى جميع أوامر البوت.\n\n    *🏆 الوصول:* https://bit.ly/licenseSombrio \n    _افتح الوصول إلى جميع الأوامر._"
+        },
+        "ativar_licenca": {
+            "texto1": "🌟 *ترخيصك مفعل بالفعل!* 🌟\n\n📧 *البريد الإلكتروني:* {{Email}}\n\n📱 *الهاتف:* {{Telefone}}\n\n🔒 *الحالة:* {{Situacao}}\n\nشكرًا لك على ثقتك في *O Sombrio WhatsApp Bot*! إذا كنت بحاجة إلى مساعدة، فنحن هنا للمساعدة.\n\n📲 لوحة التراخيص */license*",
+            "texto2": "🎉 *تهانينا!* تم التحقق من رمزك بنجاح! ✅\n\nمرحبًا بك في *O Sombrio WhatsApp Bot*! لديك الآن وصول كامل إلى الميزات المتميزة. إذا كنت بحاجة إلى أي شيء، نحن هنا للمساعدة. استمتع!\n\n📲 لوحة التراخيص */license*",
+            "texto3": "🚫 *رمز غير صالح.*\n\n*محاولات:* _{{tentativa}} من {{falha}}_\n\nيبدو أن شيئًا ما قد حدث خطأ. يرجى التحقق من الرمز والمحاولة مرة أخرى. إذا استمرت المشكلة، اتصل بدعمنا.\n\n📲 لوحة التراخيص */license*",
+            "texto4": "❌ *{{email}}* ليس بريدًا إلكترونيًا صالحًا.\n\nللتحقق من ترخيصك، أرسل الأمر *\\`.تفعيل <بريدك-الإلكتروني>\\`*.\n\n💡 *مثال:* \\`.تفعيل example@gmail.com\\`\n\n📲 لوحة التراخيص */license*",
+            "texto5": "أدخل البريد الإلكتروني الذي قدمته عند شراء الترخيص\n\n📲 لوحة التراخيص */license*",
+            "texto6": "🚫 *هذا البريد الإلكتروني {{email}} نشط بالفعل*",
+            "texto7": "<h1 style=\"color: #333;\">مرحبًا بك في O Sombrio WhatsApp Bot!</h1><p>لقد طلبت التحقق من ترخيصك لاستخدام <strong>O Sombrio</strong>.</p><p style=\"font-size: 16px; color: #555;\"><strong>رمز التحقق الخاص بك هو:</strong> <span style=\"font-size: 24px; color: #D9534F;\">{{codigoVerificacao}}</span></p><br><p>📲 لوحة التراخيص: <strong>/license</strong></p><br><p>لتنشيط الترخيص الخاص بك، انقر على الرابط أدناه أو انسخه والصقه في WhatsApp الخاص بك:</p><p><a href=\"https://wa.me/5545998306644?text=!تفعيل%20{{codigoVerificacao}}\" style=\"color: #007BFF; text-decoration: none;\">https://wa.me/5545998306644?text=!تفعيل%20{{codigoVerificacao}}</a></p><br><p style=\"color: #777;\">إذا لم تكن قد طلبت هذا التحقق، يرجى تجاهل هذا البريد الإلكتروني.</p>",
+            "texto8": "✅ *{{nome}}* _- تم إرسال رمز التحقق إلى بريدك الإلكتروني._\n\n📧 *افتح بريدك الإلكتروني* وانقر على الرابط للتحقق.\n\n🔑 أو يمكنك إرسال الأمر *\\`.تفعيل <رمزك>\\`* مباشرة في WhatsApp.\n\n💡 *مثال:* \\`.تفعيل JJVQIB\\`\n\n⏳ _هذا الرمز صالح لمدة 60 ثانية._📲 لوحة التراخيص */license*",
+            "texto9": "⏳ *رمزك قد انتهت صلاحيته!* \n\nيرجى إعادة إرسال الأمر للتحقق من ترخيصك:\n\n🔄 *\\`.تفعيل <بريدك-الإلكتروني>\\`*\n\n💡 *مثال:* \\`.تفعيل example@gmail.com\\`",
+            "texto10": "⚠️ *الترخيص غير موجود للبريد الإلكتروني:* {{argumento}}*.\n\n🔍 تحقق مما إذا كان البريد الإلكتروني صحيحًا أو احصل على الترخيص الخاص بك على: https://bit.ly/licenseSombrio\n\n📲 لوحة التراخيص */license*",
+            "texto11": "❌ *خطأ عند تنفيذ تفعيل الترخيص.*\n\nيرجى الاتصال بالدعم على: https://wa.me/5545998331383. إذا لم تكن قد اشتريت الترخيص الخاص بك، قم بزيارة https://bit.ly/licenseSombrio \n\n📲 لوحة التراخيص */license*"
+        },
         "_antilink": {
             "texto1": "*< المعادي للروابط />*_\n\n*[ ℹ️ ] تم تمكين ميزة المعادي للروابط، لكن المشارك الذي قام بإرسال الرابط هو مدير.*",
             "texto2": "_*< المعادي للروابط />*_\n\n*[ ℹ️ ] المشارك @user قام بإرسال رابط إلى مجموعة واتساب، لذا سيتم حذفه.*",
@@ -4312,10 +4325,11 @@
         },
         "adult_comandos": {
             "texto1": "[❗INFORMAÇÃO❗] تم تعطيل أوامر +18 في المجموعة، إذا كنت مشرفًا وترغب في تمكينها استخدم الأمر #enable modohorny"
-        },"adult_comandos_18": {
-    "texto1": "\n  *محاولة* _${license.comandosTmp[command].MaxTentativas} من ${license.comandosTmp[command].MaxTentativas}_\n\n  _لقد استنفدت محاولاتك لليوم، ${data}! اشترِ ترخيصًا أو انتظر حتى الغد. ${dataAmanha}_\n    *🏆 الوصول:* https://bit.ly/licenseSombrio",
-    "texto2": "*محاولة* _${license.comandosTmp[command].MaxTentativas} من ${license.comandosTmp[command].MaxTentativas} لأمر *${command}*_ \n\nاشترِ ترخيصًا أو انتظر حتى الغد للحصول على المزيد من المحاولات ${license.comandosTmp[command].MaxTentativas}! \n\n_تحتاج إلى ترخيص للوصول إلى هذا الأمر._\n\nاشترِ ترخيصك واحصل على وصول كامل إلى أوامر الروبوت.\n\n    *🏆 الوصول:* https://bit.ly/licenseSombrio \n    _افتح الوصول إلى جميع الأوامر._"
-},
+        },
+        "adult_comandos_18": {
+            "texto1": "\n  *محاولة* _${license.comandosTmp[command].MaxTentativas} من ${license.comandosTmp[command].MaxTentativas}_\n\n  _لقد استنفدت محاولاتك لليوم، ${data}! اشترِ ترخيصًا أو انتظر حتى الغد. ${dataAmanha}_\n    *🏆 الوصول:* https://bit.ly/licenseSombrio",
+            "texto2": "*محاولة* _${license.comandosTmp[command].MaxTentativas} من ${license.comandosTmp[command].MaxTentativas} لأمر *${command}*_ \n\nاشترِ ترخيصًا أو انتظر حتى الغد للحصول على المزيد من المحاولات ${license.comandosTmp[command].MaxTentativas}! \n\n_تحتاج إلى ترخيص للوصول إلى هذا الأمر._\n\nاشترِ ترخيصك واحصل على وصول كامل إلى أوامر الروبوت.\n\n    *🏆 الوصول:* https://bit.ly/licenseSombrio \n    _افتح الوصول إلى جميع الأوامر._"
+        },
         "_language": {
             "texto1": [
                 "\n\n_لتغيير اللغة، أرسل الأمر مع اختصار اللغة المطلوبة\n\n👉مثال:",
