--- a/language/ru.json
+++ b/language/ru.json
@@ -10,9 +10,22 @@
             "texto3": "_< АНТИ-АРАБЫ />_\n\n[ ℹ️ ] В этой группе не допускаются номера, начинающиеся с +92. Поэтому он будет удален из группы."
         },
         "verificationLicense": {
-        "texto2": "\n  *Попытка* _{{tentativas}} из {{MaxTentativas}}_\n\n  _Вы исчерпали свои попытки сегодня, {{data}}! Купите лицензию или подождите до завтра. {{dataAmanha}}_\n    *🏆 Доступ:* https://bit.ly/licenseSombrio",
-        "texto3": "*Попытка* _{{tentativas}} из {{MaxTentativas}} для команды *{{command}}*_ \n\nКупите лицензию или подождите до завтра, чтобы получить больше {{MaxTentativas}} попыток! \n\n_Вам нужна лицензия, чтобы получить доступ к этой команде._\n\nКупите свою лицензию и получите полный доступ ко всем командам бота.\n\n    *🏆 Доступ:* https://bit.ly/licenseSombrio \n    _Разблокируйте доступ ко всем командам._"
-    },
+            "texto2": "\n  *Попытка* _{{tentativas}} из {{MaxTentativas}}_\n\n  _Вы исчерпали свои попытки сегодня, {{data}}! Купите лицензию или подождите до завтра. {{dataAmanha}}_\n    *🏆 Доступ:* https://bit.ly/licenseSombrio",
+            "texto3": "*Попытка* _{{tentativas}} из {{MaxTentativas}} для команды *{{command}}*_ \n\nКупите лицензию или подождите до завтра, чтобы получить больше {{MaxTentativas}} попыток! \n\n_Вам нужна лицензия, чтобы получить доступ к этой команде._\n\nКупите свою лицензию и получите полный доступ ко всем командам бота.\n\n    *🏆 Доступ:* https://bit.ly/licenseSombrio \n    _Разблокируйте доступ ко всем командам._"
+        },
+        "ativar_licenca": {
+            "texto1": "🌟 *Ваша лицензия уже активирована!* 🌟\n\n📧 *Электронная почта:* {{Email}}\n\n📱 *Телефон:* {{Telefone}}\n\n🔒 *Статус:* {{Situacao}}\n\nСпасибо, что доверяете *O Sombrio WhatsApp Bot*! Если вам нужна помощь, мы здесь, чтобы помочь.\n\n📲 Панель лицензий */license*",
+            "texto2": "🎉 *Поздравляем!* Ваш код успешно подтвержден! ✅\n\nДобро пожаловать в *O Sombrio WhatsApp Bot*! Теперь у вас есть полный доступ к премиум-функциям. Если вам что-то нужно, мы здесь, чтобы помочь. Наслаждайтесь!\n\n📲 Панель лицензий */license*",
+            "texto3": "🚫 *Недействительный код.*\n\n*Попытки:* _{{tentativa}} из {{falha}}_\n\nПохоже, что что-то пошло не так. Пожалуйста, проверьте код и попробуйте снова. Если проблема сохраняется, свяжитесь с нашей поддержкой.\n\n📲 Панель лицензий */license*",
+            "texto4": "❌ *{{email}}* не является действительным адресом электронной почты.\n\nЧтобы подтвердить свою лицензию, отправьте команду *\\`.активировать <ВАШ-EMAIL>\\`*.\n\n💡 *Пример:* \\`.активировать example@gmail.com\\`\n\n📲 Панель лицензий */license*",
+            "texto5": "Введите электронную почту, которую вы указали при покупке лицензии\n\n📲 Панель лицензий */license*",
+            "texto6": "🚫 *Этот email {{email}} уже активен*",
+            "texto7": "<h1 style=\"color: #333;\">Добро пожаловать в O Sombrio WhatsApp Bot!</h1><p>Вы запросили подтверждение своей лицензии для использования бота <strong>O Sombrio</strong>.</p><p style=\"font-size: 16px; color: #555;\"><strong>Ваш код подтверждения:</strong> <span style=\"font-size: 24px; color: #D9534F;\">{{codigoVerificacao}}</span></p><br><p>📲 Панель лицензий: <strong>/license</strong></p><br><p>Чтобы активировать свою лицензию, нажмите на ссылку ниже или скопируйте и вставьте её в свой WhatsApp:</p><p><a href=\"https://wa.me/5545998306644?text=!активировать%20{{codigoVerificacao}}\" style=\"color: #007BFF; text-decoration: none;\">https://wa.me/5545998306644?text=!активировать%20{{codigoVerificacao}}</a></p><br><p style=\"color: #777;\">Если вы не запрашивали это подтверждение, пожалуйста, проигнорируйте это письмо.</p>",
+            "texto8": "✅ *{{nome}}* _- Код подтверждения был отправлен на ваш электронный адрес._\n\n📧 *Откройте свой электронный ящик* и нажмите на ссылку для подтверждения.\n\n🔑 Или вы можете отправить команду *\\`.активировать <ВАШ-КОД>\\`* прямо в WhatsApp.\n\n💡 *Пример:* \\`.активировать JJVQIB\\`\n\n⏳ _Этот код действителен в течение 60 секунд._📲 Панель лицензий */license*",
+            "texto9": "⏳ *Ваш код истек!* \n\nПожалуйста, повторно отправьте команду для подтверждения вашей лицензии:\n\n🔄 *\\`.активировать <Ваш-Email>\\`*\n\n💡 *Пример:* \\`.активировать example@gmail.com\\`",
+            "texto10": "⚠️ *Лицензия не найдена для email:* {{argumento}}*.\n\n🔍 Проверьте правильность email или получите лицензию на: https://bit.ly/licenseSombrio\n\n📲 Панель лицензий */license*",
+            "texto11": "❌ *Ошибка при активации лицензии.*\n\nПожалуйста, свяжитесь с поддержкой: https://wa.me/5545998331383. Если вы не приобрели лицензию, посетите https://bit.ly/licenseSombrio \n\n📲 Панель лицензий */license*"
+        },
         "_antilink": {
             "texto1": "< АНТИ-ССЫЛКА />_\n\n[ ℹ️ ] Анти-ссылка включена, но участник, отправивший ссылку, является администратором.",
             "texto2": "_< АНТИ-ССЫЛКА />_\n\n[ ℹ️ ] Участник @user отправил ссылку на группу WhatsApp, поэтому он будет удален.",
@@ -3715,11 +3728,11 @@
         },
         "adult_comandos": {
             "texto1": "[❗ИНФОРМАЦИЯ❗] КОМАНДЫ +18 ОТКЛЮЧЕНЫ В ГРУППЕ, ЕСЛИ ВЫ АДМИНИСТРАТОР И ХОТИТЕ ИХ ВКЛЮЧИТЬ, ИСПОЛЬЗУЙТЕ КОМАНДУ #enable modohorny"
-        },"adult_comandos_18": {
-    "texto1": "\n  *Попытка* _${license.comandosTmp[command].MaxTentativas} из ${license.comandosTmp[command].MaxTentativas}_\n\n  _Вы исчерпали все попытки на сегодня, ${data}! Купите лицензию или подождите до завтра. ${dataAmanha}_\n    *🏆 Доступ:* https://bit.ly/licenseSombrio",
-    "texto2": "*Попытка* _${license.comandosTmp[command].MaxTentativas} из ${license.comandosTmp[command].MaxTentativas} для команды *${command}*_ \n\nКупите лицензию или подождите до завтра, чтобы получить еще ${license.comandosTmp[command].MaxTentativas} попыток!\n\n_Вам нужна лицензия для доступа к этой команде._\n\nКупите лицензию и получите полный доступ ко всем командам бота.\n\n    *🏆 Доступ:* https://bit.ly/licenseSombrio \n    _Разблокируйте доступ ко всем командам._"
-}
-,
+        },
+        "adult_comandos_18": {
+            "texto1": "\n  *Попытка* _${license.comandosTmp[command].MaxTentativas} из ${license.comandosTmp[command].MaxTentativas}_\n\n  _Вы исчерпали все попытки на сегодня, ${data}! Купите лицензию или подождите до завтра. ${dataAmanha}_\n    *🏆 Доступ:* https://bit.ly/licenseSombrio",
+            "texto2": "*Попытка* _${license.comandosTmp[command].MaxTentativas} из ${license.comandosTmp[command].MaxTentativas} для команды *${command}*_ \n\nКупите лицензию или подождите до завтра, чтобы получить еще ${license.comandosTmp[command].MaxTentativas} попыток!\n\n_Вам нужна лицензия для доступа к этой команде._\n\nКупите лицензию и получите полный доступ ко всем командам бота.\n\n    *🏆 Доступ:* https://bit.ly/licenseSombrio \n    _Разблокируйте доступ ко всем командам._"
+        },
         "_language": {
             "texto1": [
                 "\n\nЧтобы изменить язык, отправьте команду с аббревиатурой желаемого языка\n\n👉Пример:",
