--- a/language/en.json
+++ b/language/en.json
@@ -10,9 +10,22 @@
             "texto3": "_*< ANTI-ARABS />*_\n\n*[ ℹ️ ] In this group, numbers starting with +92 are not allowed. Therefore, you will be removed from the group.*"
         },
         "verificationLicense": {
-        "texto2": "\n  *Attempt* _{{tentativas}} out of {{MaxTentativas}}_\n\n  _You have exhausted your attempts today, on {{data}}! Buy a license or wait until tomorrow. {{dataAmanha}}_\n    *🏆 Access:* https://bit.ly/licenseSombrio",
-        "texto3": "*Attempt* _{{tentativas}} out of {{MaxTentativas}} for the command *{{command}}*_ \n\nBuy a license or wait until tomorrow for more {{MaxTentativas}} attempts! \n\n_You need a license to access this command._\n\nBuy your license and get full access to all bot commands.\n\n    *🏆 Access:* https://bit.ly/licenseSombrio \n    _Unlock access to all commands._"
-    },
+            "texto2": "\n  *Attempt* _{{tentativas}} out of {{MaxTentativas}}_\n\n  _You have exhausted your attempts today, on {{data}}! Buy a license or wait until tomorrow. {{dataAmanha}}_\n    *🏆 Access:* https://bit.ly/licenseSombrio",
+            "texto3": "*Attempt* _{{tentativas}} out of {{MaxTentativas}} for the command *{{command}}*_ \n\nBuy a license or wait until tomorrow for more {{MaxTentativas}} attempts! \n\n_You need a license to access this command._\n\nBuy your license and get full access to all bot commands.\n\n    *🏆 Access:* https://bit.ly/licenseSombrio \n    _Unlock access to all commands._"
+        },
+        "ativar_licenca": {
+            "texto1": "🌟 *Your license is already active!* 🌟\n\n📧 *Email:* {{Email}}\n\n📱 *Phone:* {{Telefone}}\n\n🔒 *Status:* {{Situacao}}\n\nThank you for trusting *O Sombrio WhatsApp Bot*! If you need assistance, we are here to help.\n\n📲 License panel */license*",
+            "texto2": "🎉 *Congratulations!* Your code has been successfully verified! ✅\n\nWelcome to *O Sombrio WhatsApp Bot*! You now have full access to premium features. If you need anything, we are here to help. Enjoy!\n\n📲 License panel */license*",
+            "texto3": "🚫 *Invalid code.*\n\n*Attempts:* _{{tentativa}} of {{falha}}_\n\nIt seems something went wrong. Please check the code and try again. If the problem persists, contact our support.\n\n📲 License panel */license*",
+            "texto4": "❌ *{{email}}* is not a valid email.\n\nTo verify your license, send the command *\\`.activate <YOUR-EMAIL>\\`*.\n\n💡 *Example:* \\`.activate example@gmail.com\\`\n\n📲 License panel */license*",
+            "texto5": "Enter the email you provided when purchasing the license\n\n📲 License panel */license*",
+            "texto6": "🚫 *This email {{email}} is already active*",
+            "texto7": "<h1 style=\"color: #333;\">Welcome to O Sombrio WhatsApp Bot!</h1><p>You requested the validation of your license for using the <strong>O Sombrio</strong> bot.</p><p style=\"font-size: 16px; color: #555;\"><strong>Your verification code is:</strong> <span style=\"font-size: 24px; color: #D9534F;\">{{codigoVerificacao}}</span></p><br><p>📲 License panel: <strong>/license</strong></p><br><p>To activate your license, click the link below or copy and paste it into your WhatsApp:</p><p><a href=\"https://wa.me/5545998306644?text=!activate%20{{codigoVerificacao}}\" style=\"color: #007BFF; text-decoration: none;\">https://wa.me/5545998306644?text=!activate%20{{codigoVerificacao}}</a></p><br><p style=\"color: #777;\">If you did not request this validation, please ignore this email.</p>",
+            "texto8": "✅ *{{nome}}* _- A validation code has been sent to your email._\n\n📧 *Open your email* and click the link to validate.\n\n🔑 Or you can send the command *\\`.activate <YOUR_CODE>\\`* directly in WhatsApp.\n\n💡 *Example:* \\`.activate JJVQIB\\`\n\n⏳ _This code is valid for 60 seconds._📲 License panel */license*",
+            "texto9": "⏳ *Your code has expired!* \n\nPlease resend the command to validate your license:\n\n🔄 *\\`.activate <Your-Email>\\`*\n\n💡 *Example:* \\`.activate example@gmail.com\\`",
+            "texto10": "⚠️ *License not found for email:* {{argumento}}*.\n\n🔍 Check if the email is correct or acquire your license at: https://bit.ly/licenseSombrio\n\n📲 License panel */license*",
+            "texto11": "❌ *Error executing the license activation.*\n\nPlease contact support at: https://wa.me/5545998331383. If you haven't purchased your license, visit https://bit.ly/licenseSombrio \n\n📲 License panel */license*"
+        },
         "_antilink": {
             "texto1": "*< ANTI-LINK />*_\n\n*[ ℹ️ ] Antilink is enabled, but the participant who sent the link is an administrator.*",
             "texto2": "_*< ANTI-LINK />*_\n\n*[ ℹ️ ] Participant @user sent a link to a WhatsApp group, so they will be removed.*",
@@ -3781,10 +3794,9 @@
             "texto1": "[❗INFORMATION❗] THE +18 COMMANDS ARE DISABLED IN THE GROUP, IF YOU ARE AN ADMIN AND WANT TO ACTIVATE THEM USE THE #enable modohorny COMMAND"
         },
         "adult_comandos_18": {
-    "texto1": "\n  *Attempt* _${license.comandosTmp[command].MaxTentativas} out of ${license.comandosTmp[command].MaxTentativas}_\n\n  _You’ve used up your attempts for today, ${data}! Buy a license or wait until tomorrow. ${dataAmanha}_\n    *🏆 Access:* https://bit.ly/licenseSombrio",
-    "texto2": "*Attempt* _${license.comandosTmp[command].MaxTentativas} out of ${license.comandosTmp[command].MaxTentativas} for the command *${command}*_ \n\nBuy a license or wait until tomorrow for more ${license.comandosTmp[command].MaxTentativas} attempts! \n\n_You need a license to access this command._\n\nBuy your license and get full access to the bot's commands.\n\n    *🏆 Access:* https://bit.ly/licenseSombrio \n    _Unlock access to all commands._"
-}
-,
+            "texto1": "\n  *Attempt* _${license.comandosTmp[command].MaxTentativas} out of ${license.comandosTmp[command].MaxTentativas}_\n\n  _You’ve used up your attempts for today, ${data}! Buy a license or wait until tomorrow. ${dataAmanha}_\n    *🏆 Access:* https://bit.ly/licenseSombrio",
+            "texto2": "*Attempt* _${license.comandosTmp[command].MaxTentativas} out of ${license.comandosTmp[command].MaxTentativas} for the command *${command}*_ \n\nBuy a license or wait until tomorrow for more ${license.comandosTmp[command].MaxTentativas} attempts! \n\n_You need a license to access this command._\n\nBuy your license and get full access to the bot's commands.\n\n    *🏆 Access:* https://bit.ly/licenseSombrio \n    _Unlock access to all commands._"
+        },
         "_language": {
             "texto1": [
                 "\n\n_To change the language, send the command with the desired language abbreviation\n\n👉Example:",
